--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,7 @@
 
     <string name="error_sign_in_google_collision">There already exists an account with your email address</string>
     <string name="error_sign_in_google_user_not_exists">You do not have an account with this email address</string>
+    <string name="error_sign_in_google_in_progress">A sign in process is currently in progress</string>
 
     <string name="error_internal_google_title">External error</string>
     <string name="error_internal_google_body">We are having some external errors</string>
@@ -40,4 +41,7 @@
     <string name="register_btn_text">Register</string>
     <string name="loading">Loading</string>
     <string name="done">Done</string>
+
+    <!-- Verify -->
+    <string name="verifying">Verifying code...</string>
 </resources>
