--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,9 @@
 
     <string name="hint_email">Email</string>
     <string name="hint_password">Password</string>
-    <string name="login_btn_txt">Log in</string>
+    <string name="login_btn_txt">Access</string>
+    <string name="sign_in">Sign in</string>
+
     <string name="loading_sign_in_google">Signing in with Google...</string>
 
     <!-- Register -->
