--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,6 +29,14 @@
 
     <string name="loading_sign_in_google">Signing in with Google...</string>
 
+    <!-- Main -->
+    <string name="item_home_profile">Profile</string>
+    <string name="item_home_configuration">Configuration</string>
+    <string name="item_home_ranking">Ranking</string>
+    <string name="item_home_about">About</string>
+    <string name="item_home_analytics">Analytics</string>
+    <string name="item_home_play">Start game</string>
+
     <!-- Register -->
     <string name="error_email_already_exists">Email already exists</string>
 
@@ -49,4 +57,6 @@
 
     <!-- Verify -->
     <string name="verifying">Verifying code...</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
