--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -54,6 +54,10 @@
     <string name="loading">Cargando</string>
     <string name="done">Completado</string>
 
+    <!-- Settings -->
+    <string name="item_settings_log_out">Cerrar sesión</string>
+    <string name="version_info">Versión %s</string>
+
     <!-- Verify -->
     <string name="verifying">Verificando código...</string>
 </resources>
