--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,8 +55,10 @@
     <string name="loading">Loading</string>
     <string name="done">Done</string>
 
+    <!-- Settings -->
+    <string name="item_settings_log_out">Log out</string>
+    <string name="version_info">Version %s</string>
+
     <!-- Verify -->
     <string name="verifying">Verifying code...</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
