--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -36,6 +36,10 @@
     <string name="item_home_analytics">Estadísticas</string>
     <string name="item_home_play">Empezar partida</string>
 
+    <!-- Play -->
+    <string name="game_mode_thirty">Partida 30</string>
+    <string name="game_mode_sixty">Partida 60</string>
+
     <!-- Register -->
     <string name="error_email_already_exists">El correo electrónico ya existe</string>
 
