--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,6 +57,11 @@
     <string name="loading">Loading</string>
     <string name="done">Done</string>
 
+    <!-- Reset Password -->
+    <string name="accept">Accept</string>
+    <string name="reset_password">Reset password</string>
+    <string name="type_email">Write yor email to recover your password</string>
+
     <!-- Settings -->
     <string name="item_settings_log_out">Log out</string>
     <string name="version_info">Version %s</string>
