Allow to update questions

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -42,6 +42,7 @@
     <string name="game_mode_sixty">Partida 60</string>
 
     <!-- Register -->
+    <string name="name">Name</string>
     <string name="error_code_verification">No hemos podido verificar su correo electrónico, contacte con soporte</string>
     <string name="error_email_already_exists">El correo electrónico ya existe</string>
     <string name="error_email_malformed">Correo electrónico incorrecto</string>
@@ -63,6 +64,7 @@
 
     <!-- Settings -->
     <string name="item_settings_log_out">Cerrar sesión</string>
+    <string name="item_settings_update_questions">Actualizar preguntas</string>
     <string name="version_info">Versión %s</string>
 
     <!-- Verify -->
