--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,7 @@
     <string name="game_mode_sixty">60 Questions</string>
 
     <!-- Register -->
+    <string name="name">Name</string>
     <string name="error_code_verification">We are experiencing technical difficulties verifying your email. Contact with our support team</string>
     <string name="error_email_already_exists">Email already exists</string>
     <string name="error_email_malformed">Email malformed</string>
@@ -64,6 +65,7 @@
 
     <!-- Settings -->
     <string name="item_settings_log_out">Log out</string>
+    <string name="item_settings_update_questions">Update questions</string>
     <string name="version_info">Version %s</string>
 
     <!-- Verify -->
