Greeting register fragment

--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -42,7 +42,8 @@
     <string name="game_mode_sixty">Partida 60</string>
 
     <!-- Register -->
-    <string name="name">Name</string>
+    <string name="register_greeting">¡Hola %s!</string>
+    <string name="name">Nombre</string>
     <string name="error_code_verification">No hemos podido verificar su correo electrónico, contacte con soporte</string>
     <string name="error_email_already_exists">El correo electrónico ya existe</string>
     <string name="error_email_malformed">Correo electrónico incorrecto</string>
