--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,5 +70,6 @@
     <string name="version_info">Version %s</string>
 
     <!-- Verify -->
+    <string name="verify_code_scree_welcome">Hi %s! After sending the registration form, please check your inbox for an e-mail inviting you to confirm your registration.</string>
     <string name="verifying">Verifying code...</string>
 </resources>
