--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,6 +42,11 @@
     <string name="game_mode_thirty">30 Questions</string>
     <string name="game_mode_sixty">60 Questions</string>
 
+    <string name="roulette_item_1">Bronze badge</string>
+    <string name="roulette_item_2">Gold badge</string>
+    <string name="roulette_item_3">Silver badge</string>
+    <string name="roulette_item_4">Plastic badge</string>
+
     <!-- Register -->
     <string name="register_greeting">Hi %s!</string>
     <string name="name">Name</string>
