--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -41,6 +41,10 @@
     <string name="game_mode_thirty">Partida 30</string>
     <string name="game_mode_sixty">Partida 60</string>
 
+    <string name="results_correct_questions">Respuestas correctas</string>
+    <string name="results_time_average">Tiempo promedio en responder</string>
+
+    <string name="rotate_roulette">Girar la ruleta</string>
     <string name="roulette_item_1">Medalla de bronce</string>
     <string name="roulette_item_2">Medalla de oro</string>
     <string name="roulette_item_3">Medalla de plata</string>
