--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,18 +39,19 @@
     <string name="item_home_play">Start game</string>
 
     <!-- Play -->
+    <string name="game_mode_title">Selecciona el tipo de partida</string>
     <string name="game_mode_thirty">30 Questions</string>
     <string name="game_mode_sixty">60 Questions</string>
 
-    <string name="results_title">Results</string>
+    <string name="results_title">Score</string>
     <string name="results_correct_questions">Correct answers</string>
     <string name="results_time_average">Time average</string>
 
     <string name="rotate_roulette">Spin the wheel</string>
-    <string name="roulette_item_1">Bronze badge</string>
-    <string name="roulette_item_2">Gold badge</string>
-    <string name="roulette_item_3">Silver badge</string>
-    <string name="roulette_item_4">Plastic badge</string>
+    <string name="roulette_item_1">+10 points</string>
+    <string name="roulette_item_2">+4 points</string>
+    <string name="roulette_item_3">+5 points</string>
+    <string name="roulette_item_4">Oops</string>
 
     <!-- Register -->
     <string name="register_greeting">Hi %s!</string>
