--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,8 +40,7 @@
 
     <!-- Play -->
     <string name="game_mode_title">Selecciona el tipo de partida</string>
-    <string name="game_mode_thirty">30 Questions</string>
-    <string name="game_mode_sixty">60 Questions</string>
+    <string name="game_mode_option">%d Questions</string>
 
     <string name="time">Time</string>
 
