--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -48,12 +48,12 @@
     <string name="results_time_average">Tiempo promedio en responder</string>
     <string name="results_time_average_value">%d segs</string>
     <string name="results_experience">Experiencia adquirida</string>
+    <string name="results_points">Puntuación</string>
+    <string name="results_points_value">Puntaje %d. Puntos para el ranking %d</string>
+    <string name="results_reward">Premio</string>
 
     <string name="rotate_roulette">Gira la ruleta</string>
-    <string name="roulette_item_1">+10 points</string>
-    <string name="roulette_item_2">+4 points</string>
-    <string name="roulette_item_3">+5 points</string>
-    <string name="roulette_item_4">Oops</string>
+    <string name="roulette_item_points">+%d puntos</string>
 
     <!-- Profile -->
     <string name="profile_title">Mi perfil</string>
