--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,6 +63,8 @@
     <string name="roulette_item_points">+%d points</string>
     <string name="roulette_item_exp" translatable="false">+%d EXP</string>
 
+    <string name="dialog_topic_picker_title">Select topics you are interested in</string>
+
     <!-- Profile -->
     <string name="profile_title">My profile</string>
     <string name="profile_experience">Experience</string>
