--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -75,9 +75,12 @@
 
     <!-- Register -->
     <string name="register_greeting">¡Hola %s!</string>
-    <string name="age">Edad</string>
+    <string name="age">Fecha de nacimiento</string>
+    <string name="city">Ciudad de origen</string>
     <string name="course">Asignatura</string>
-    <string name="genre">Género</string>
+    <string name="gender">Sexo</string>
+    <string name="gender_male">Masculino</string>
+    <string name="gender_female">Femenino</string>
     <string name="group">Grupo</string>
     <string name="name">Nombre</string>
     <string name="surname">Apellidos</string>
