--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,9 +77,12 @@
 
     <!-- Register -->
     <string name="register_greeting">Hi %s!</string>
-    <string name="age">Age</string>
+    <string name="age">Date of birth</string>
+    <string name="city">City</string>
     <string name="course">Course</string>
-    <string name="genre">Genre</string>
+    <string name="gender">Gender</string>
+    <string name="gender_male">Male</string>
+    <string name="gender_female">Female</string>
     <string name="group">Group</string>
     <string name="name">Name</string>
     <string name="surname">Surname</string>
