--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -43,6 +43,7 @@
     <string name="item_home_play">Empezar partida</string>
 
     <!-- Play -->
+    <string name="error_no_questions_found">Tenemos dificultades para empezar la partida</string>
     <string name="game_mode_classic">Partida de %d preguntas</string>
     <string name="game_mode_weekly">Partida semanal</string>
     <string name="game_mode_test">Partida de prueba</string>
